correct scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,24 @@ header {
     padding-bottom: 50px;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(20, 114, 169);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:active {
+    background: #022881;
+}
+
 .nav__list {
     display: flex;
     justify-content: space-between;
@@ -105,6 +123,7 @@ header {
     bottom: -150px;
     left: 0;
 }
+
 .position__relative {
     position: absolute;
     top: -80px;
